<resources>
    <string name="app_name">RollTheDice</string>
    <string name="Player_A">Player A</string>
    <string name="game_point_a">0</string>
    <string name="Player_B">Player B</string>
    <string name="game_point_b">0</string>
    <string name="game_point">Game Point</string>
    <string name="game_point_default">100</string>
    <string name="game_over_message">Winner is  </string>
    <string name="start_the_game">Start</string>
    <string name="stop_the_game">Stop</string>
</resources>
